# aiowebdav2

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  README.md  package-lock.json  package.json  prek.toml  pyproject.toml
.github/: renovate.json
.github/workflows/: codeql.yml  linting.yml  release.yml  tests.yml  typing.yml
aiowebdav2/: __init__.py  client.py  connection.py  exceptions.py  models.py  parser.py  typing.py  typing_helper.py  urn.py
tests/: __init__.py  base_client_it.py  compressed.txt  conftest.py  ruff.toml  test_client.py  test_exceptions.py  test_parser.py  test_resource.py  test_urn.py
tests/responses/: free_space.xml  free_space_incorrect.xml  free_space_not_supported.xml  get_info.xml  get_list.xml  get_list_directories.xml  get_list_empty.xml  get_list_incorrect.xml  get_list_multiple.xml  get_list_recursive.xml  get_property.xml  is_dir_directory.xml  is_dir_directory_not_supported.xml  is_dir_file.xml  list_with_properties.xml  quota_used_only.xml
tests/responses/nextcloud/: get_list.xml  get_list_with_spaces.xml
