[project]
name = "aiowebdav2"
version = "0.0.0"
description = "Async Python 3 client for WebDAV, based on aiowebdav and https://github.com/ezhov-evgeny/webdav-client-python-3"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.11"
authors = [
    { name = "Jan-Philipp Benecke", email = "jan-philipp@bnck.me" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.8.0",
    "aiofiles>=0.7.0",
    "lxml>=5.3.0",
    "python-dateutil>=2.9.0.post0",
    "yarl>=1.18.3",
]

[dependency-groups]
dev = [
    "codespell==2.4.2",
    "covdefaults==2.3.0",
    "coverage[toml]==7.13.5",
    "pylint==4.0.5",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "prek>=0.1.0",
    "pre-commit-hooks==6.0.0",
    "mypy==1.19.1",
    "ruff==0.15.9",
    "syrupy==5.1.0",
    "yamllint==1.38.0",
    "aioresponses==0.7.8",
    "types-aiofiles>=24.1.0.20241221",
    "types-python-dateutil>=2.9.0.20241206",
]

[project.urls]
"Bug Tracker" = "https://github.com/jpbede/aiowebdav2/issues"
Changelog = "https://github.com/jpbede/aiowebdav2/releases"
"Repository" = "https://github.com/jpbede/aiowebdav2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiowebdav2"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["aiowebdav2"]

[tool.mypy]
platform = "linux"
python_version = "3.11"
follow_imports = "normal"
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.MASTER]
ignore = ["tests"]

[tool.pylint.BASIC]
good-names = ["_", "ex", "fp", "i", "id", "j", "k", "on", "Run", "T"]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "duplicate-code",
    "format",
    "unsubscriptable-object",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-public-methods",
    "too-few-public-methods",
    "wrong-import-order",
    "protected-access"
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 120
extension-pkg-allow-list = "lxml"

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint.pycodestyle]
max-doc-length = 120
max-line-length = 120

[tool.ruff.lint]
ignore = [
    "ANN401",
    "D203",
    "D213",
    "D417",
    "PLR2004",
    "PLR0913",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "DTZ007",
    "ASYNC109",
    "ASYNC240",
]
select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["aiowebdav2"]
force-sort-within-sections = true
split-on-trailing-comma = false
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 25
